# yt-GUI

./: .gitignore  Dockerfile  app.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 16685c87878a_add_scan_jobs.py  4973a6a31eea_init_tables.py  8ed59e5b7392_video_download_markers.py  91666ed9f5b0_video_download_markers.py  d8a26c04c662_download_job_timestamps_progress.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: downloads.py  health.py  me.py  sources.py  videos.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  download_job.py  scan_job.py  source.py  video.py
apps/api/app/integrations/: ytdlp_client.py
apps/api/app/workers/: queue.py  tasks.py
apps/web/: package-lock.json  vite.config.ts
apps/web/src/: App.tsx
apps/workers/: run_worker.py
