[project]
name = "yt-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
    "yt-dlp>=2025.12.8",
    "alembic>=1.13.0",
]
